dhall/tests/type-errors/hurkensParadox.txt
Type error: Unhandled error: error: function annot mismatch
  --> <current file>:6:23
   |
 1 |     let bottom : Type = ∀(any : Type) → any
 2 | 
 3 | in  let not : Type → Type = λ(p : Type) → p → bottom
 4 | 
...
10 |         : pow (pow U) → U
11 |         =   λ(t : pow (pow U))
   |                        ^^^^^ function annot mismatch
   |                        --- help: this expects an argument of type: Kind
   |                            - help: but this has type: Sort
   |
